--- a/main.tex
+++ b/main.tex
@@ -151,7 +151,7 @@
 \include{chapters/intro}
 \include{chapters/state_of_the_art}
 \include {chapters/things_to_overcome}
-%\include{chapters/ex3}
+\include{chapters/impl}
 %\include{chapters/ex4}
 %\include{chapters/deliverables}
 
