Enable reatrd mode, add a bit for MEC-View

--- a/main.tex
+++ b/main.tex
@@ -136,13 +136,13 @@
 %--- Front matter
 %---------------------------------------------------------------------
 
+\setstretch{1.5}
 \pagenumbering{roman}
 
 \input{frontmatter}
 
 \tableofcontents
 \newpage
-
 %---------------------------------------------------------------------
 %--- Main part of thesis
 %---------------------------------------------------------------------
