I did my part for today! yay! Can I haz vacation for the next weeks?

--- a/main.tex
+++ b/main.tex
@@ -151,6 +151,8 @@
 
 %\input{chapter_A}
 \include{chapters/intro}
+\include{chapters/the_tool}
+\include{chapters/topics}
 \include{chapters/state_of_the_art}
 \include {chapters/things_to_overcome}
 \include{chapters/impl}
