Move all the links to the bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,7 +1,191 @@
-@book{LA1979,
-author = {Lars Ahlfors},
-title = {Complex Analysis},
-publisher = {McGraw-Hill},
-address = {New York},
-year = {1979}
+
+
+@online{hdfs:main,
+	author = {The Apache Software Foundation},
+	title = {Apache Hadoop},
+	url = {https://hadoop.apache.org/},
+	urldate = {2019-09-19},
 }
+
+
+@online{hdfs:doc,
+	author = {The Apache Software Foundation},
+	title = {Apache Hadoop},
+	subtitle = {Documentation},
+	url = {https://hadoop.apache.org/docs/current/},
+	urldate = {2019-09-19},
+}
+
+@online{infosphere:datastage,
+	author = {IBM Knowledge Center},
+	title = {IBM InfoSphere},
+	subtitle = {DataStage},
+	url = {https://www.ibm.com/support/knowledgecenter/en/SSZJPZ_9.1.0/com.ibm.swg.im.iis.ds.design.doc/topics/c_ddesref_Server_Job_Stages_.html},
+	urldate = {2019-09-19},
+}
+
+@online{gitlab:ci:yaml,
+	author = {GitLab, Inc.},
+	title = {GitLab CI/CD},
+	subtitle = {Pipeline Configuration Reference},
+	url = {https://docs.gitlab.com/ee/ci/yaml/},
+	urldate = {2019-09-19},
+}
+
+@online{jenkins:pipeline:jenkinsfile,
+	author = {jenkins.io},
+	title = {Using a Jenkinsfile},
+	url = {https://jenkins.io/doc/book/pipeline/jenkinsfile/},
+	urldate = {2019-09-19},
+}
+
+@online{quartz:main,
+	author = {Terracotta, Inc.},
+	title = {QuartzJob Scheduler},
+	url = {http://www.quartz-scheduler.org/},
+	urldate = {2019-09-19},
+}
+
+@online{quartz:overview,
+	author = {Terracotta, Inc.},
+	title = {QuartzJob Scheduler},
+	subtitle = {Overview},
+	url = {http://www.quartz-scheduler.org/overview/},
+	urldate = {2019-09-19},
+}
+
+@online{quartz:quickstart,
+	author = {Terracotta, Inc.},
+	title = {Quartz Quick Start Guide},
+	url = {http://www.quartz-scheduler.org/documentation/quartz-2.3.0/quick-start.html},
+	urldate = {2019-09-19},
+}
+
+
+
+@online{cscs:high_throughput,
+	author = {Swiss National Supercomputing Centre},
+	title = {High Throughput Scheduler},
+	url = {https://user.cscs.ch/tools/high_throughput/},
+	urldate = {2019-09-19},
+}
+
+
+
+@online{camunda:main,
+	author = {Camunda Services GmbH},
+	title = {Workflow and Decision Automation Platform},
+	url = {https://camunda.com/},
+	urldate = {2019-09-19},
+}
+
+@online{camunda:process_engine_api,
+	author = {Camunda Services GmbH},
+	title = {Process Engine API},
+	url = {https://docs.camunda.org/manual/7.6/user-guide/process-engine/process-engine-api},
+	urldate = {2019-09-19},
+}
+
+@online{camunda:rest_api_reference,
+	author = {Camunda Services GmbH},
+	title = {Rest Api Reference},
+	url = {https://docs.camunda.org/manual/7.8/reference/rest},
+	urldate = {2019-09-19},
+}
+
+
+@online{luigi:etc:distributed_pipelines,
+	author = {Data Revenue},
+	title = {Distributed Python Machine Learning Pipelines},
+	url = {https://www.datarevenue.com/en/blog/how-to-scale-your-machine-learning-pipeline},
+	urldate = {2019-09-19},
+}
+
+
+@online{celery:main,
+	author = {Ask Solem},
+	title = {Celery: Distributed Task Queue},
+	url = {http://www.celeryproject.org},
+	urldate = {2019-09-19},
+}
+
+
+@online{nomad:main,
+	author = {HashiCorp},
+	title = {Nomad},
+	url = {https://www.nomadproject.io/},
+	urldate = {2019-09-19},
+}
+
+@online{nomad:vs:kubernetes,
+	author = {HashiCorp},
+	title = {Nomad},
+	subtitle = {Nomad vs. Kubernetes},
+	url = {https://www.nomadproject.io/intro/vs/kubernetes.html},
+	urldate = {2019-09-19},
+}
+
+
+
+
+@online{dcache:main,
+	author = {Patrick Fuhrmann, Tigran Mkrtchyan},
+	title = {dCache},
+	subtitle = {Scope of the project},
+	url = {https://www.dcache.org},
+	urldate = {2019-09-19},
+}
+
+@online{dcache:overview:whitepaper,
+	author = {Patrick Fuhrmann},
+	title = {dCache, the Overview},
+	url = {https://www.dcache.org/manuals/dcache-whitepaper-light.pdf},
+	urldate = {2019-09-19},
+}
+
+
+@online{zsync:main,
+	author = {Colin Phipps},
+	title = {zsync},
+	subtitle = {Overview},
+	url = {http://zsync.moria.org.uk/},
+	urldate = {2019-09-19},
+}
+
+
+@online{alluxio:main,
+	author = {Colin Phipps},
+	title = {Alluxio},
+	subtitle = {Data Orchestration for the Cloud},
+	url = {https://www.alluxio.io},
+	urldate = {2019-09-19},
+}
+
+
+
+@online{glusterfs:main,
+	author = {Red Hat, Inc},
+	title = {Gluster},
+	subtitle = {Free and open source scalable network filesystem},
+	url = {https://www.gluster.org},
+	urldate = {2019-09-19},
+}
+
+
+@online{wiki:winslow:person,
+    author = {Wikipedia contributors},
+	title = {Frederick Winslow Taylor},
+	subtitle = "{Wikipedia}{,} The Free Encyclopedia",
+	url = {https://en.wikipedia.org/w/index.php?title=Frederick_Winslow_Taylor&oldid=913471357},
+	urldate = {2019-09-19},
+}
+
+
+
+
+
+
+
+
+
+
