--- a/main.tex
+++ b/main.tex
@@ -163,10 +163,10 @@
 %--- Bibliography and appendices
 %---------------------------------------------------------------------
 
-%\printbibliography
+\printbibliography
 \addcontentsline{toc}{chapter}{Bibliography}
 
-\appendix
-\input{appendices}
+%\appendix
+%\input{appendices}
 		
 \end{document}
