--- a/bibliography.bib
+++ b/bibliography.bib
@@ -24,11 +24,26 @@
 	urldate = {2019-09-19},
 }
 
+@online{gitlab:main,
+	author = {GitLab, Inc.},
+	title = {The first single application for the entire DevOps lifecycle},
+	url = {https://about.gitlab.com/},
+	urldate = {2019-09-21},
+}
+
 @online{gitlab:ci:yaml,
 	author = {GitLab, Inc.},
 	title = {GitLab CI/CD},
 	subtitle = {Pipeline Configuration Reference},
 	url = {https://docs.gitlab.com/ee/ci/yaml/},
+	urldate = {2019-09-19},
+}
+
+@online{jenkins:main,
+	author = {jenkins.io},
+	title = {Jenkins},
+	subtitle = {Build great things at any scale},
+	url = {https://jenkins.io/},
 	urldate = {2019-09-19},
 }
 
