--- a/bibliography.bib
+++ b/bibliography.bib
@@ -140,6 +140,13 @@
 	urldate = {2019-09-19},
 }
 
+@online{nomad:etc:gui_thesis,
+	author = {Bc. Pavel Peroutka},
+	title = {Web interface for the deployment andmonitoring of Nomad jobs},
+	subtitle = {Master’s thesis},
+	url = {https://dspace.cvut.cz/bitstream/handle/10467/80106/F8-DP-2019-Peroutka-Pavel-thesis.pdf},
+	urldate = {2019-09-22},
+}
 
 
 
