Just kill me already, will you?

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -203,11 +203,26 @@
 }
 
 
+@online{qsub:etc:wiki,
+	author = {Wikipedia contributors},
+	title = {Qsub},
+	subtitle = "{Wikipedia}{,} The Free Encyclopedia",
+	url = {https://en.wikipedia.org/w/index.php?title=Qsub&oldid=745279355},
+	urldate = {2019-09-22},
+}
 
+@online{qsub:etc:uiowa,
+	author = {The University Of Iowa},
+	title = {Basic Job Submission},
+	subtitle = "HPC Documentation Home / Cluster Systems Documentation ",
+	url = {https://wiki.uiowa.edu/display/hpcdocs/Basic+Job+Submission},
+	urldate = {2019-09-22},
+}
 
-
-
-
-
-
+@online{docker:main,
+	author = {Docker, Inc.},
+	title = {Enterprise Container Platform},
+	url = {https://www.docker.com/},
+	urldate = {2019-09-22},
+}
 
