Stahp it. Get some help.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -226,3 +226,18 @@
 	urldate = {2019-09-22},
 }
 
+
+
+@online{openio:main,
+	author = {OpenIO},
+	title = {High Performance Object Storage for Big Data and AI},
+	url = {https://www.openio.io/},
+	urldate = {2019-09-22},
+}
+
+@online{seeweedfs:main,
+	author = {Chris Lu},
+	title = {Simple and highly scalable distributed file system.},
+	url = {https://github.com/chrislusf/seaweedfs},
+	urldate = {2019-09-22},
+}
