--- a/bibliography.bib
+++ b/bibliography.bib
@@ -226,6 +226,21 @@
 	urldate = {2019-09-22},
 }
 
+@online{docker:hub,
+	author = {Docker, Inc.},
+	title = {Docker Hub},
+	subtitle = {Build and Ship any Application Anywhere},
+	url = {https://hub.docker.com/},
+	urldate = {2019-09-22},
+}
+
+@online{docker:registry,
+	author = {Docker, Inc.},
+	title = {Docker Documentation},
+	subtitle = {Docker Registry},
+	url = {https://docs.docker.com/registry/},
+	urldate = {2019-09-22},
+}
 
 
 @online{openio:main,
@@ -241,3 +256,5 @@
 	url = {https://github.com/chrislusf/seaweedfs},
 	urldate = {2019-09-22},
 }
+
+
