--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,9 @@
 \usepackage{pgfplots}
 \usepackage{pdflscape}
 
+\usepackage{pgfgantt}
+\usepackage{float}
+
 \input{config.listing}
 
 
@@ -154,8 +157,12 @@
 \include{chapters/the_tool}
 \include{chapters/state_of_the_art}
 \include{chapters/topics}
-\include {chapters/things_to_overcome}
-\include{chapters/impl}
+\include{chapters/schedule}
+
+%\include {chapters/things_to_overcome}
+%\include{chapters/impl}
+%\include{eeeh}
+
 %\include{chapters/ex4}
 %\include{chapters/deliverables}
 
