Fix bib order, add mecview cite

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -258,3 +258,12 @@
 }
 
 
+
+
+
+@online{mecview:main,
+	author = {Dr. Rüdiger W. Henn, MEC-View},
+	title = {Mobile Edge Computing basierte Objekterkennung für hoch- und vollautomatisiertes Fahren},
+	url = {http://mec-view.de/},
+	urldate = {2019-09-29},
+}
