--- a/main.tex
+++ b/main.tex
@@ -81,9 +81,7 @@
 
 \usepackage[style=numeric, minnames=3,
             doi=false, url=false, isbn=false,
-            firstinits=true,
-            sortcites=true,
-            backend=biber]{biblatex}
+            sorting=none, backend=biber]{biblatex}
 
 \addbibresource{bibliography.bib}
 
