Start to collect requirements / use cases

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -259,11 +259,15 @@
 
 
 
-
-
-@online{mecview:main,
-	author = {Dr. Rüdiger W. Henn, MEC-View},
-	title = {Mobile Edge Computing basierte Objekterkennung für hoch- und vollautomatisiertes Fahren},
-	url = {http://mec-view.de/},
-	urldate = {2019-09-29},
+@Inbook{Rosenberg2007,
+	title="Use Case Modeling",
+	bookTitle="Use Case Driven Object Modeling with UML: Theory and Practice",
+	year="2007",
+	publisher="Apress",
+	address="Berkeley, CA",
+	pages="49--82",
+	abstract="With an initial domain model in place, it's time to begin writing use cases. Use cases give you a structured way of capturing the behavioral requirements of a system, so that you can reasonably create a design from them. They help you to answer some fundamental questions: What are the users of the system trying to do? What's the user experience? A surprising amount of what your software does is dictated by the way in which users must interact with it.",
+	isbn="978-1-4302-0369-8",
+	doi="10.1007/978-1-4302-0369-8_3",
+	url="https://doi.org/10.1007/978-1-4302-0369-8_3"
 }
