Mumble mumble docker mumble mumble

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -234,6 +234,21 @@
 	urldate = {2019-09-22},
 }
 
+@online{docker:logo,
+	author = {Docker, Inc.},
+	title = {Docker},
+	subtitle = {Docker Logos and Photos},
+	url = {https://www.docker.com/company/newsroom/media-resources},
+	urldate = {2020-01-16},
+}
+
+@online{docker:overview,
+	author = {Docker, Inc.},
+	title = {Docker Documentation},
+	subtitle = {Docker overview},
+	url = {https://docs.docker.com/engine/docker-overview/},
+	urldate = {2020-01-16},
+}
 @online{docker:registry,
 	author = {Docker, Inc.},
 	title = {Docker Documentation},
