--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 \usepackage[ngerman, english]{babel}
 
 
+
 \usepackage[hidelinks]{hyperref}
 \usepackage{graphicx, xcolor}
 
@@ -21,6 +22,7 @@
 
 \usepackage{pgfgantt}
 \usepackage{float}
+\usepackage{wrapfig}
 
 \input{config.listing}
 \input{config.tikz}
@@ -161,6 +163,7 @@
 \include{chapters/topics}
 \include{chapters/schedule}
 \include{chapters/name}
+\include{chapters/fundamentals}
 \include{chapters/requirements}
 \include{chapters/architecture}
 \include{chapters/decisions}
