Julian, guten Tag, y u watching this? Structurize based on bachelorthesis + Julian

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,12 @@
 
+@book{goll2012methoden,
+	title={Methoden des Software Engineering: Funktions-, daten-, objekt- und aspektorientiert entwickeln},
+	author={Goll, J.},
+	isbn={9783834824332},
+	url={https://books.google.de/books?id=4wScMQEACAAJ},
+	year={2012},
+	publisher={Springer Fachmedien Wiesbaden}
+}
 
 @online{hdfs:main,
 	author = {The Apache Software Foundation},
