--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \usepackage{geometry}         % Customize page geometry
 \usepackage{setspace}         % To set line spacing
 \usepackage{graphicx}
-\usepackage[ngerman, english]{babel}
+\usepackage[ngerman, english]{babel}\usepackage[autostyle=true,german=quotes]{csquotes} %\enquote might not work on older latex versions ... huh
 
 
 
@@ -146,7 +146,6 @@
 
 \input{frontmatter}
 \include{chapters/declaration}
-\include{chapters/abstrct}
 
 \tableofcontents
 \newpage
@@ -165,8 +164,12 @@
 \include{chapters/name}
 \include{chapters/fundamentals}
 \include{chapters/requirements}
+\include{chapters/system_analysis}
 \include{chapters/architecture}
 \include{chapters/decisions}
+\include{chapters/metrics}
+\include{chapters/further_work}
+\include{chapters/conclusion}
 
 %\include {chapters/things_to_overcome}
 %\include{chapters/impl}
