Moar shitty shit

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -233,7 +233,6 @@
 	url = {https://www.docker.com/},
 	urldate = {2019-09-22},
 }
-
 @online{docker:hub,
 	author = {Docker, Inc.},
 	title = {Docker Hub},
@@ -241,7 +240,6 @@
 	url = {https://hub.docker.com/},
 	urldate = {2019-09-22},
 }
-
 @online{docker:logo,
 	author = {Docker, Inc.},
 	title = {Docker},
@@ -249,7 +247,6 @@
 	url = {https://www.docker.com/company/newsroom/media-resources},
 	urldate = {2020-01-16},
 }
-
 @online{docker:overview,
 	author = {Docker, Inc.},
 	title = {Docker Documentation},
@@ -264,6 +261,23 @@
 	url = {https://docs.docker.com/registry/},
 	urldate = {2019-09-22},
 }
+@online{docker:swarm:key-concepts,
+	author = {Docker, Inc.},
+	title = {Docker Documentation},
+	subtitle = {Swarm mode key concepts},
+	url = {https://docs.docker.com/engine/swarm/key-concepts/},
+	urldate = {2020-03-17},
+}
+
+
+@online{kubernetes:overview,
+	author = {The Kubernetes Authors},
+	title = {Kubernetes},
+	subtitle = {What is Kubernetes},
+	url = {https://kubernetes.io/docs/concepts/overview/what-is-kubernetes/},
+	urldate = {2020-03-17},
+}
+
 
 
 @online{openio:main,
@@ -294,3 +308,21 @@
 	doi="10.1007/978-1-4302-0369-8_3",
 	url="https://doi.org/10.1007/978-1-4302-0369-8_3"
 }
+
+
+@online{mecview:main,
+	author = {Dr. Rüdiger W. Henn, MEC-View},
+	title = {Mobile Edge Computing basierte Objekterkennung für hoch- und vollautomatisiertes Fahren},
+	url = {http://mec-view.de/},
+	urldate = {2019-09-29},
+}
+
+@misc{ wiki:winslow,
+	author = "{Wikipedia contributors}",
+	title = "Frederick Winslow Taylor --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2020",
+	url = "https://en.wikipedia.org/w/index.php?title=Frederick_Winslow_Taylor&oldid=945285142",
+	note = "[Online; accessed 17-March-2020]"
+}
+
+
