--- a/main.tex
+++ b/main.tex
@@ -60,7 +60,8 @@
   right=25mm,
   bindingoffset=0mm, 
   top=25mm,
-  bottom=25mm
+  bottom=25mm,
+  includeheadfoot % makes many more sites o.O
 }
 
 %---------------------------------------------------------------------
@@ -128,7 +129,7 @@
 \emph{Supervisor:} \\
 \thesupervisor
 \end{flushright}
-\end{minipage}\\[4cm]
+\end{minipage}\\[1cm]
 
 % Year
 {\large Date of Submission: {\selectlanguage{english}\today}} \\[3cm] 
