Add more analysis stuffi stuffffffff

--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \usepackage[ngerman, english]{babel}\usepackage[autostyle=true,german=quotes]{csquotes} %\enquote might not work on older latex versions ... huh
 
 
-
+\usepackage{verbatim} % for multiline comments: \begin{comment} .. \end{comment}
 \usepackage[hidelinks]{hyperref}
 \usepackage{graphicx, xcolor}
 
