--- a/bibliography.bib
+++ b/bibliography.bib
@@ -268,6 +268,14 @@
 	url = {https://docs.docker.com/engine/swarm/key-concepts/},
 	urldate = {2020-03-17},
 }
+@online{docker:acquisition,
+	author = {Docker, Inc.},
+	title = {Press Release},
+	subtitle = {Docker Restructures and Secures \$35 Million to Advance Developer Workflows for Modern Applications},
+	url = {https://www.docker.com/press-release/docker-new-direction},
+	urldate = {2020-03-23},
+}
+
 
 
 @online{kubernetes:overview,
