Use matrix instead of surface for proper 24x7 cells + add duration histogram+boxplot (useless?)

--- a/config.tikz.tex
+++ b/config.tikz.tex
@@ -1,5 +1,7 @@
 \usepackage{tikz-uml}
 
+\usetikzlibrary{pgfplots.statistics}        % to draw `boxplot's
+
 % strange bug with arrows.meta
 % You can't use `\unskip' in vertical mode.
 % https://tex.stackexchange.com/questions/298904/strange-tikz-problem-memoir-vs-xcolor-vs-tikz/299001
