No Interim Reportoooo

--- a/main.tex
+++ b/main.tex
@@ -43,12 +43,12 @@
 \newcommand{\thecollege}{College of Engineering, Design and Physical Sciences, Electronic and Computer Engineering}
 \newcommand{\thedepartment}{Distributed Computing Systems Engineering}
 %\newcommand{\thecoursetitle}{Master Thesis - Interim Report}
-\newcommand{\thecoursetitle}{Interim Report}
+\newcommand{\thecoursetitle}{Master Thesis}
 \newcommand{\thestudent}{Michael Watzko}
 \newcommand{\thestudentid}{1841795}
 \newcommand{\thesupervisor}{Dr. Paul Kyberd}
 \newcommand{\theyear}{2019}
-\newcommand{\thetitle}{ Conception and realization of a distributed and automated computer vision pipeline}
+\newcommand{\thetitle}{ Conception and Realization of a Distributed and Automated Computer Vision Pipeline}
 
 %--------------------------------------------------------------------
 %--- Global page geometry and layout
@@ -132,7 +132,7 @@
 \end{minipage}\\[1cm]
 
 % Year
-{\large Date of Submission: {\selectlanguage{english}\today}} \\[3cm] 
+{\large {\selectlanguage{english}March 31st, 2020}} \\[2cm] 
 
 \vfill % Fill the rest of the page with whitespace
 \end{titlepage}
