--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -6,3 +6,8 @@
  as a 'chapter.'
 
 A short summary of what the project is about.
+
+\todo{.}
+
+~\\
+Keywords: Software, Architecture, Events, Messaging, Filesystem, Distributed, Coordination, Docker, Spring Boot, REST, Angular, Typescript
