--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \usepackage{graphicx}
 \usepackage[ngerman, english]{babel}\usepackage[autostyle=true,german=quotes]{csquotes} %\enquote might not work on older latex versions ... huh
 
+\usepackage{makecell} % multi line table cells
 
 \usepackage{verbatim} % for multiline comments: \begin{comment} .. \end{comment}
 \usepackage[hidelinks]{hyperref}
