The great refactoring

--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -1,13 +1,21 @@
 % to utf8: ö
 
-\chapter*{Abstract}
-\addcontentsline{toc}{chapter}{Abstract}
- The asterisk prevents this file from being labelled
- as a 'chapter.'
+\chapter*{Abstract} % The asterisk prevents this file from being labelled as a chapter.
+%\addcontentsline{toc}{chapter}{Abstract}
+ 
+ 
 
 A short summary of what the project is about.
 
 \todo{.}
+
+schedule large work items
+
+special hardware needs
+
+automation and highly customizable pipeline
+
+focus on easy setup  and low maintenance
 
 ~\\
 Keywords: Software, Architecture, Events, Messaging, Filesystem, Distributed, Coordination, Docker, Spring Boot, REST, Angular, Typescript
