--- a/main.tex
+++ b/main.tex
@@ -147,7 +147,7 @@
 \pagenumbering{roman}
 
 \input{frontmatter}
-\include{chapters/declaration}
+%\include{chapters/declaration}
 
 \tableofcontents
 \newpage
@@ -162,16 +162,15 @@
 \include{chapters/the_tool}
 \include{chapters/state_of_the_art}
 \include{chapters/name}
-\include{chapters/fundamentals}
-\include{chapters/requirements}
+%\include{chapters/requirements}
 \include{chapters/system_analysis}
+\include{chapters/schedule}
 \include{chapters/architecture}
-\include{chapters/decisions}
+%\include{chapters/decisions}
 \include{chapters/topics}
 \include{chapters/metrics}
 \include{chapters/further_work}
 \include{chapters/conclusion}
-\include{chapters/schedule}
 
 %\include {chapters/things_to_overcome}
 %\include{chapters/impl}
