This shit is still a mess

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -277,6 +277,15 @@
 }
 
 
+@online{palermo:onion,
+	author = {Jeffrey Palermo},
+	title = {The Onion Architecture},
+	url = {https://jeffreypalermo.com/2008/07/the-onion-architecture-part-1/},
+	urldate = {2020-03-26},
+}
+
+
+
 @online{nfs:pnfs,
 	author = {IETF | Internet Engineering Task Force},
 	title = {RFC 5661},
