totally not panicking

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -277,15 +277,42 @@
 }
 
 
+@online{angular,
+	author = {Google},
+	title = {Angular},
+	url = {https://angular.io/},
+	urldate = {2020-03-29},
+}
+@online{typescript,
+	author = {Microsoft},
+	title = {TypeScript},
+	subtitle = {JavaScript that scales},
+	url = {https://www.typescriptlang.org/},
+	urldate = {2020-03-29},
+}
 @online{palermo:onion,
 	author = {Jeffrey Palermo},
 	title = {The Onion Architecture},
 	url = {https://jeffreypalermo.com/2008/07/the-onion-architecture-part-1/},
 	urldate = {2020-03-26},
 }
+@online{overlayfs,
+	author = {Neil Brown},
+	title = {Linux Kernel Documentation},
+	subtitle = {Overlay Filesystem},
+	url = {https://www.kernel.org/doc/Documentation/filesystems/overlayfs.txt},
+	urldate = {2020-03-29},
+}
 
 
 
+@online{http:methods,
+	author = {IETF | Internet Engineering Task Force},
+	title = {RFC 7231},
+	subtitle = {Hypertext Transfer Protocol (HTTP/1.1)},
+	url = {https://tools.ietf.org/html/rfc7231#section-4},
+	urldate = {2020-03-29},
+}
 @online{nfs:pnfs,
 	author = {IETF | Internet Engineering Task Force},
 	title = {RFC 5661},
