--- a/main.tex
+++ b/main.tex
@@ -150,7 +150,7 @@
 	% Student name, student number and supervisor
 	~\\[1cm]
 	\textbf{ } \\
-	\thestudentid\\[1cm]
+	~\\[1cm]
 	
 	% Year
 	{\large {\selectlanguage{english}March 31st, 2020}} \\[1cm] 
@@ -205,8 +205,9 @@
 %--- Bibliography and appendices
 %---------------------------------------------------------------------
 
-\printbibliography
+\newpage
 \addcontentsline{toc}{chapter}{Bibliography}
+\printbibliography
 
 \appendix
 %\input{appendices}
