--- a/bibliography.bib
+++ b/bibliography.bib
@@ -303,7 +303,37 @@
 	url = {https://www.kernel.org/doc/Documentation/filesystems/overlayfs.txt},
 	urldate = {2020-03-29},
 }
+@online{kafka,
+	author = {The Apache Software Foundation},
+	title = {Apache Kafka},
+	url = {https://kafka.apache.org/},
+	urldate = {2020-03-29},
+}
 
+
+
+@online{gnu:open,
+	author = {GNU.org / The Free Software Foundation},
+	title = {Opening and Closing Files},
+	url = {https://www.gnu.org/software/libc/manual/html_node/Opening-and-Closing-Files.html},
+	urldate = {2020-03-29},
+}
+
+
+@online{javadoc:standard_open_options:create_new,
+	author = {Oracle},
+	title = {Java Platform SE 7},
+	subtitle = {StandardOpenOptions},
+	url = {https://docs.oracle.com/javase/7/docs/api/java/nio/file/StandardOpenOption.html#CREATE_NEW},
+	urldate = {2020-03-29},
+}
+@online{javadoc:files:write,
+	author = {Oracle},
+	title = {Java Platform SE 7},
+	subtitle = {Files},
+	url = {https://docs.oracle.com/javase/7/docs/api/java/nio/file/Files.html},
+	urldate = {2020-03-29},
+}
 
 
 @online{http:methods,
