wololololololol brainz not found

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,6 +7,24 @@
 	year={2012},
 	publisher={Springer Fachmedien Wiesbaden}
 }
+@book{goll2018entwurfsprinzipien,
+	title={Entwurfsprinzipien und Konstruktionskonzepte der Softwaretechnik: Strategien f{\"u}r schwach gekoppelte, korrekte und stabile Software},
+	author={Goll, J.},
+	isbn={9783658200558},
+	url={https://books.google.de/books?id=kW9GDwAAQBAJ},
+	year={2018},
+	publisher={Springer Fachmedien Wiesbaden}
+}
+@book{martin2003agile,
+	title={Agile Software Development: Principles, Patterns, and Practices},
+	author={Martin, R.C. and Rabaey, J.M. and Chandrakasan, A.P. and Nikolic, B.},
+	isbn={9780135974445},
+	lccn={95022672},
+	series={Alan Apt series},
+	url={https://books.google.de/books?id=0HYhAQAAIAAJ},
+	year={2003},
+	publisher={Pearson Education}
+}
 
 @online{hdfs:main,
 	author = {The Apache Software Foundation},
@@ -233,6 +251,12 @@
 	url = {https://www.docker.com/},
 	urldate = {2019-09-22},
 }
+@online{docker:api,
+	author = {Docker, Inc.},
+	title = {Develop with Docker Engine API},
+	url = {https://docs.docker.com/engine/api/},
+	urldate = {2020-03-29},
+}
 @online{docker:hub,
 	author = {Docker, Inc.},
 	title = {Docker Hub},
@@ -277,6 +301,13 @@
 }
 
 
+
+@online{nvidia:docker_plugin,
+	author = {NVIDIA},
+	title = {NVIDIA Container Toolkit},
+	url = {https://github.com/NVIDIA/nvidia-docker},
+	urldate = {2020-03-29},
+}
 @online{angular,
 	author = {Google},
 	title = {Angular},
