--- a/bibliography.bib
+++ b/bibliography.bib
@@ -381,6 +381,27 @@
 	url = {https://tools.ietf.org/html/rfc5661\#section-1.7.2.2},
 	urldate = {2020-03-26},
 }
+@online{nfs:ssc,
+	author = {IETF | Internet Engineering Task Force},
+	title = {RFC 7862},
+	subtitle = {Network File System (NFS) Version 4 Minor Version 2 Protocol},
+	url = {https://tools.ietf.org/html/rfc7862},
+	urldate = {2020-03-29},
+}
+
+
+@online{linux:doc:proc,
+	title = {The /proc filesystem},
+	url = {https://www.kernel.org/doc/Documentation/filesystems/proc.txt},
+	urldate = {2020-03-29},
+}
+@online{springboot,
+	author = {VMware, Inc. or its affiliates},
+	title = {Spring},
+	url = {https://spring.io/},
+	urldate = {2020-03-29},
+}
+
 
 
 
