--- a/main.tex
+++ b/main.tex
@@ -210,7 +210,8 @@
 \printbibliography
 
 \appendix
-%\input{appendices}
+\include{chapters/appendix_winslow_installation}
+\include{chapters/screenshots}
 \chapter{Interim Report}
 \includepdf[pages={2-}]{interim.pdf}
 		
