welp, this is now feature complete-ish... riiiiiiight???!???

--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -4,18 +4,17 @@
 %\addcontentsline{toc}{chapter}{Abstract}
  
  
+\todo{.polish! and extend?}
+ 
 
-A short summary of what the project is about.
+%A short summary of what the project is about.
 
-\todo{.}
-
-schedule large work items
-
-special hardware needs
-
-automation and highly customizable pipeline
-
-focus on easy setup  and low maintenance
+This thesis if about implementing a distributed system to process large work items with specialized hardware requirements in Docker container.
+The system furthermore assists the user by organizing the work items into projects, tracking execution progress and monitoring hardware utilization.
+All this is reported to the user in an Angular Web-Application which also allows the user to customize the execution pipeline, inspect intermediate results and to actively manage stage executions.
+Decentralized elections select the node which best fits the resources needs.
+%Easy setup and extendability is the focus for dependency and architecture evaluation.
+The system and evaluation process is focused on easy setup and extendability.
 
 ~\\
-Keywords: Software, Architecture, Events, Messaging, Filesystem, Distributed, Coordination, Docker, Spring Boot, REST, Angular, Typescript
+Keywords: Events, Messaging, Synchronization, Software, Architecture, Distributed, Coordination, Docker, SpringBoot, REST, Angular, Typescript
