beta-sih!? re-read and polish

--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -4,7 +4,7 @@
 %\addcontentsline{toc}{chapter}{Abstract}
  
  
-\todo{.polish! and extend?}
+\todo{.polish}
  
 
 %A short summary of what the project is about.
