First time reading through, need to move time table to appendix

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -403,6 +403,18 @@
 }
 
 
+@online{berenson1995a,
+	author = {Berenson, Hal and Bernstein, Phil and Gray, Jim and Melton, Jim and O'Neil, Elizabeth and O'Neil, Patrick},
+	title = {A Critique of ANSI SQL Isolation Levels},
+	year = {1995},
+	month = {June},
+	publisher = {Association for Computing Machinery, Inc.},
+	url = {https://www.microsoft.com/en-us/research/publication/a-critique-of-ansi-sql-isolation-levels/},
+	pages = {12},
+	number = {MSR-TR-95-51},
+	urldate = {2020-03-31},
+}
+
 
 
 @online{kubernetes:overview,
