Minor adjustmenst, update anonymized version, going to upload this now as fallback

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -473,4 +473,23 @@
 }
 
 
+@online{brit:winslow,
+	author = "John F. Mee",
+	title = "Frederick W. Taylor",
+	subtitle = {American inventor and engineer},
+	url = {https://www.britannica.com/biography/Frederick-W-Taylor},
+	urldate = {2020-03-31},	
+}
+
+
+@online{brit:taylorism,
+	author = "The Editors of Encyclopaedia Britannica",
+	title = "Taylorism",
+	subtitle = {scientific management system},
+	url = {https://www.britannica.com/science/Taylorism},
+	urldate = {2020-03-31},	
+}
+
+
+
 
