--- a/main.tex
+++ b/main.tex
@@ -190,7 +190,7 @@
 %\include{chapters/decisions}
 \include{chapters/topics}
 \include{chapters/metrics}
-\include{chapters/further_work}
+%\include{chapters/further_work}
 \include{chapters/conclusion}
 
 %\include {chapters/things_to_overcome}
