--- a/bibliography.bib
+++ b/bibliography.bib
@@ -158,6 +158,14 @@
 	urldate = {2019-09-19},
 }
 
+@online{nomad:affinity,
+	author = {HashiCorp},
+	title = {Nomad},
+	subtitle = {Affinity Stanza},
+	url = {https://nomadproject.io/docs/job-specification/affinity/},
+	urldate = {2020-03-31},
+}
+
 @online{nomad:vs:kubernetes,
 	author = {HashiCorp},
 	title = {Nomad},
