All those minor adjustments...

--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -16,4 +16,4 @@ The decentralized system detects and recovers from node failures and uses electi
 It is focused on easy setup and extendability.
 
 ~\\
-Keywords: Events, Messaging, Synchronization, Software, Architecture, Distributed, Coordination, Docker, SpringBoot, REST, Angular, Typescript
+Keywords: Synchronization, Distributed, Coordination, Events, Messaging, Software, Architecture, Docker, Spring Boot, REST, Angular, Typescript
