--- a/main.tex
+++ b/main.tex
@@ -42,10 +42,10 @@
     \centering
     \includegraphics[width=.5\textwidth]{brunel.jpg}
   \end{figure}}
-\newcommand{\thecollege}{College of Engineering, Design and Physical Sciences, Electronic and Computer Engineering}
+\newcommand{\thecollege}{College of Engineering, Design and Physical Sciences\\Department of Electronic and Computer Engineering}
 \newcommand{\thedepartment}{Distributed Computing Systems Engineering}
 %\newcommand{\thecoursetitle}{Master Thesis - Interim Report}
-\newcommand{\thecoursetitle}{Master Thesis}
+\newcommand{\thecoursetitle}{Master's Thesis}
 \newcommand{\thestudent}{Michael Watzko}
 \newcommand{\thestudentid}{1841795}
 \newcommand{\thesupervisor}{Dr. Paul Kyberd}
